Fixed font issue on mobile for Problem this product solves section heading

--- a/themes/the-black-circle/assets/sass/content-box.scss
+++ b/themes/the-black-circle/assets/sass/content-box.scss
@@ -89,7 +89,9 @@
                 }   
             }
             h4 {
-                font-size: $font-size-base * 1.875;
+                @include media-breakpoint-up(xl) {
+                    font-size: $font-size-base * 1.875;
+                }
             }
             p {
                 font-size: $font-size-base * 0.938;
